# ai-visibility-platform

./: .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  test-output.txt
backend/app/: __init__.py  config.py  extensions.py
backend/app/agents/: dataforseo.py  discovery.py  llm.py  prompts.py  recommendation.py  scoring.py  seranking.py
backend/app/api/: profiles.py  queries.py
backend/app/models/: __init__.py  profile.py  query.py  recommendation.py  run.py
backend/app/schemas/: agent_outputs.py  requests.py
backend/app/services/: pipeline.py
backend/app/utils/: responses.py  scoring.py
backend/migrations/versions/: 6462b6615940_initial_schema.py
backend/tests/: conftest.py  test_api_profiles.py  test_api_queries.py  test_api_runs.py  test_app.py  test_dataforseo.py  test_discovery.py  test_llm.py  test_models.py  test_pipeline.py  test_rate_limit.py  test_recommendation_agent.py  test_schemas.py  test_scoring.py  test_scoring_agent.py  test_seranking.py
docs/: FullStack_Assessment.md
docs/superpowers/plans/: 2026-07-03-backend-implementation.md  2026-07-03-frontend-implementation.md
docs/superpowers/specs/: 2026-07-03-ai-visibility-platform-design.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CompetitorsInput.tsx  Pager.tsx  (+12 more)
(+30 files in other folders)
